--- a/code/sfsChess/.classpath
+++ b/code/sfsChess/.classpath
@@ -2,10 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="C:/Users/danny/Code/Flash/scyllacharybdis-server/sfs2x/lib/log4j-1.2.15.jar"/>
-	<classpathentry kind="lib" path="C:/Users/danny/Code/Flash/scyllacharybdis-server/sfs2x/lib/sfs2x.jar"/>
-	<classpathentry kind="lib" path="C:/Users/danny/Code/Flash/scyllacharybdis-server/sfs2x/lib/sfs2x-core.jar"/>
-	<classpathentry kind="lib" path="C:/Users/danny/Code/Flash/scyllacharybdis-server/sfs2x/lib/slf4j-api-1.5.10.jar"/>
-	<classpathentry kind="lib" path="C:/Users/danny/Code/Flash/scyllacharybdis-server/sfs2x/lib/slf4j-log4j12.jar"/>
+	<classpathentry kind="lib" path="../../sfs2x/lib/log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="../../sfs2x/lib/sfs2x.jar"/>
+	<classpathentry kind="lib" path="../../sfs2x/lib/sfs2x-core.jar"/>
+	<classpathentry kind="lib" path="../../sfs2x/lib/slf4j-api-1.5.10.jar"/>
+	<classpathentry kind="lib" path="../../sfs2x/lib/slf4j-log4j12.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
